# crew-ai-psycho

./: LICENSE  README.md
psycho/: README.md  pyproject.toml  report.md
psycho/src/psycho/: crew.py  main.py
psycho/src/psycho/config/: agents.yaml  tasks.yaml
