[project]
name = "psycho"
version = "0.1.0"
description = "psycho using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
psycho = "psycho.main:run"
run_crew = "psycho.main:run"
train = "psycho.main:train"
replay = "psycho.main:replay"
test = "psycho.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
